back button added,some improvements made

--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,11 @@ body {
   height: 36px;
   border-radius: 4px;
 
+ /*
   color: white;
   border-color: rgb(68, 130, 255);
- 
   background-color: rgb(68, 130, 255);
-
+*/
   line-height: 1.5;
   padding: 0px 25px;
 
